<resources>
    <string name="app_name">Chis Laundry</string>
    //string pada dry cleaning
    <string name="Keb"><b>Kebaya</b></string>
    <string name="Jas"><b>Jas</b></string>
    <string name="har1"><b>Rp. 6000</b></string>
    <string name="har2"><b>Rp. 5000</b></string>
    <string name="drycleaningdesc">Deskripsi Dry Cleaning</string>
    <string name="iconnotification">Ikon notifikasi</string>
    <string name="pilih_pakaian">pilih-pakaian</string>
    <string name="foto_kebaya">foto_kebaya</string>
    <string name="foto_jas">foto-jas</string>
    <string name="foto_jaket">foto-jaket</string>
    <string name="foto_gaun">foto-gaun</string>
    <string name="jaket"><b>Jaket</b></string>
    <string name="har3"><b>Rp. 3000</b></string>
    <string name="gaun"><b>Gaun</b></string>
    <string name="har4"><b>Rp. 7000</b></string>
    <string name="tambah">TAMBAH</string>
    <string name="ikon_tambah">+</string>
    <string name="ikon_kurang">-</string>
    //string premium wash
    <string name="premiumwashdesc">premiumwashdesc</string>
    <string name="title_activity_daftarakun">DaftarakunActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cucisetrika">cucisetrika</string>
    <string name="headercucisetrika">headercucisetrika</string>
    <string name="cucisetrikateks">cucisetrikateks</string>
    <string name="kembalikehome">kembalikehome</string>
    <string name="definisicucidansetrika">definisicucidansetrika</string>
    <string name="rokimage">rok</string>
    <string name="fotokaos">fotokaos</string>
    <string name="fotokemeja">fotokemeja</string>
    <string name="fotokaoskaki">fotokaoskaki</string>
    <string name="fotopakaiandalam">fotopakaiandalam</string>
    <string name="fotocelana">fotocelana</string>
    <string name="fotorok">fotorok</string>
    <string name="baju_kaos">Baju Kaos</string>
    <string name="kemeja">Kemeja</string>
    <string name="kaos_kaki">Kaos Kaki</string>
    <string name="pakaian_dalam">Pakaian Dalam</string>
    <string name="celana">Celana</string>
    <string name="rok">Rok</string>
    <string name="headerdetaillaundry">headerdetaillaundry</string>
    <string name="detaillaundry">detaillaundry</string>
    <string name="ikonkembali">ikonkembali</string>
    <string name="ikonlogo">ikonlogo</string>
    <string name="chisteks">chisteks</string>
    <string name="laundryteks">laundryteks</string>
    <string name="definisichislaundry">definisichislaundry</string>
    <string name="kategoriteks">kategoriteks</string>
    <string name="kategoricard">kategoricard</string>
    <string name="premiumwashpict">premiumwashpict</string>
    <string name="drycleaningpict">drycleaningpict</string>
    <string name="setrikapict">setrikapict</string>
    <string name="cuciandsetrikapict">cuciandsetrikapict</string>
    <string name="setrikateks">setrika</string>
    <string name="putrihandphone">082247605073 (Putri)</string>
    <string name="cekalamatlaundry">cekalamatlaundry</string>
    <string name="hubungiadmin">hubungiadmin</string>
    <string name="klik_disini">Klik Disini</string>
    <string name="headerdrycleaning">headerdrycleaning</string>
    <string name="masukkan_password_anda">Masukkan Password Anda!</string>
    <string name="masukkan_email_anda">Masukkan Email Anda!</string>
</resources>