<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    tools:context=".DetaillaundryActivity">

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="411dp"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/headercucisetrika"
        android:contentDescription="@string/headerdetaillaundry" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/detlaundry"
        android:contentDescription="@string/detaillaundry" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="360dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vectorback"
        android:contentDescription="@string/ikonkembali" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView40"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logodry"
        android:contentDescription="@string/ikonlogo" />

    <ImageView
        android:id="@+id/imageView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="244dp"
        android:contentDescription="@string/ikonlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logodry2" />

    <ImageView
        android:id="@+id/imageView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="92dp"
        android:contentDescription="@string/chisteks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chis1" />

    <ImageView
        android:id="@+id/imageView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="52dp"
        android:contentDescription="@string/laundryteks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/laund1" />

    <ImageView
        android:id="@+id/imageView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/definisichislaundry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:srcCompat="@drawable/chisdesc" />

    <ImageView
        android:id="@+id/imageView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="316dp"
        android:contentDescription="@string/kategoriteks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kategori" />

    <ImageView
        android:id="@+id/imageView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="204dp"
        android:contentDescription="@string/kategoriteks"
        app:layout_constraintEnd_toEndOf="@+id/imageView40"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle11" />

    <ImageView
        android:id="@+id/imageView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/kategoricard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle11" />

    <ImageView
        android:id="@+id/imageView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="204dp"
        android:contentDescription="@string/kategoricard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle11" />

    <ImageView
        android:id="@+id/imageView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/kategoricard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle11" />

    <ImageView
        android:id="@+id/imageView63"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="76dp"
        android:contentDescription="@string/premiumwashpict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adornment2" />

    <ImageView
        android:id="@+id/imageView64"
        android:layout_width="69dp"
        android:layout_height="67dp"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="252dp"
        android:contentDescription="@string/drycleaningpict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dry2" />

    <ImageView
        android:id="@+id/imageView65"
        android:layout_width="92dp"
        android:layout_height="64dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/setrikapict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iron4" />

    <ImageView
        android:id="@+id/imageView66"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="252dp"
        android:contentDescription="@string/cuciandsetrikapict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/washing2" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/rounded_corner"
        android:contentDescription="@string/drycleaningdesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/drycleaning" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/rounded_corner"
        android:contentDescription="@string/premiumwashdesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/premiumwash" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/rounded_corner"
        android:contentDescription="@string/setrikateks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/setrika" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/rounded_corner"
        android:contentDescription="@string/cucisetrika"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cucisetrika" />

    <ImageView
        android:id="@+id/imageView67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/cekalamatlaundry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/alamatcek" />

    <ImageView
        android:id="@+id/imageView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/hubungiadmin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hubadmin" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="68dp"
        android:text="@string/putrihandphone"
        android:textColor="@color/biru_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/poppins"
        android:text="@string/klik_disini"
        android:textAllCaps="false"
        android:textColor="@color/biru_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>